# pysolarfocus

./: example.py  pyproject.toml
pysolarfocus/: __init__.py
pysolarfocus/components/: biomass_boiler.py  pellets_boiler.py
pysolarfocus/components/base/: component.py
src/pysolarfocus/: __init__.py
src/pysolarfocus/components/: biomass_boiler.py
