[tool.poetry]
name = "pysolarfocus-debug"
version = "3.4.1"
description = "Unofficial, local Solarfocus client (forked test version), please use original version from lavermanjj"
authors = ["lein1013 <lein1013@gmx.at>"]
license = "Apache-2.0"
homepage = "https://github.com/lein1013/pysolarfocus"
repository = "https://github.com/lein1013/pysolarfocus"
keywords = ["solarfocus", "api client"]
include = ["LICENSE"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
pymodbus = "2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
